[package]
name = "rust-tcp-handson-with-claude-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_tcp_handson_with_claude_code"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "step01"
path = "src/step01/main.rs"

[[bin]]
name = "step02"
path = "src/step02/main.rs"

[[bin]]
name = "step03"
path = "src/step03/main.rs"
